	* Misc files.  Patch provided by Gerd v. Egidy that solves the following
	  problems
	  - binutils 2.21 is not available on the gnu servers anymore, they replaced
	    it with 2.21.1
	  - there is some assembler error when compiling gcc for arm, gcc bugzilla
	    43999
	  - you can't build nuttx for cortex m3/m4 because of a missing instruction
	    in the assembler, binutils bugzilla 12296
	* Add support for binutils 2.22 and GCC 4.6.3.
	* Change name of all tools from xxx-elf to xxx-nuttx-elf
	* Added an ARM EABI GCC 4.6.3 configuration (tool name is arm-nuttx-eabi-).
	* ldnxflat: Add support for the R_ARM_REL32 relocation.  This relocation
	  type was not generated by GCC/LD prior to gcc-4.6.3
	* R_ARM_REL32 logic is conditionally disabled because it has not been
	  tested.
	* ldnxflat: Correct a memory allocation error that could cause written
	  past the end of allocated memory.  Partial restoration of R_ARM_REL32
	  logic.  There are lots of issues that I still do not understand here.

buildroot-1.12 2013-03-15 <gnutt@nuttx.org>

	* Fix typo toolchain/gdb/Config.in that prevented GDB 7.4 from building
	  (from Ken Bannister).
	* Add support for a Cortex-M0 toolchain based on GCC 4.6.3.

buildroot-1.13 2011-01-29 <gnutt@nuttx.org>

	* Ubuntu's HOSTCC prints 'gcc-Version 4.6.3' but dependencies.sh expects
	  'gcc version 4.6.3'.  This changes solves the issue, but should be
	  revisited at some time.  From Oliver Riesener (2013-12-12).
	* Add support for Cortex-A5 and Cortex-A8
	* Bring-in support for GCC 4.8.2 from the "real" buildroot (2013-12-26).

buildroot-1.14 2011-xx-xx <gnutt@nuttx.org>

	* Support for the GCC 4.7.3 compiler from David Alession (2014-2-18)
	* Support for the Cortex-M4F (with hardware floating point).  Also from
	  David Alessio (2014-2-18).
	* Added a Cortex-M3 GCC 4.8.2 EABI configuration (2014-2-27).
	* toolchain/nxflat/ldnxflat.c and mknxflat.c:  Fix error with binutils-2.4:
	  bfd.h wants us to include config.h first (2014-2.27).
