@@ -71,6 +71,7 @@ BR2_GNU_TARGET_SUFFIX="nuttx-eabi"
 #
 # Binutils Options
 #
+BR2_PACKAGE_BINUTILS=y
 # BR2_BINUTILS_VERSION_2_17 is not set
 # BR2_BINUTILS_VERSION_2_18 is not set
 # BR2_BINUTILS_VERSION_2_19 is not set
