@@ -50,6 +50,7 @@ BR2_GNU_TARGET_SUFFIX="nuttx-elf"
 #
 # Binutils Options
 #
+BR2_PACKAGE_BINUTILS=y
 BR2_BINUTILS_VERSION_2_17=y
 # BR2_BINUTILS_VERSION_2_19 is not set
 # BR2_BINUTILS_VERSION_2_19_1 is not set
