@@ -7,6 +7,7 @@ source "toolchain/gcc/Config.in"
 source "toolchain/gdb/Config.in"
 source "toolchain/nxflat/Config.in"
 source "toolchain/genromfs/Config.in"
+source "toolchain/kconfig-frontends/Config.in"
 
 comment "Common Toolchain Options"
 
