@@ -1,0 +1,34 @@
+config BR2_PACKAGE_KCONFIG_FRONTENDS
+	bool "Build kconfig-frontends"
+	default y
+	help
+	  The kconfig-frontends are required to configure NuttX.  See
+	  http://ymorin.is-a-geek.org/projects/kconfig-frontends
+
+	  NOTE: You must have the ncurses library installed on your computer
+
+if BR2_PACKAGE_KCONFIG_FRONTENDS
+
+config BR2_NCONF_FRONTEND
+	bool "Build nconfig frontend"
+	default n
+	help
+	  NOTE: You must have the ncurses library installed on your computer
+
+config BR2_GCONF_FRONTEND
+	bool "Build GTK gconf frontend"
+	default n
+	help
+	  NOTE: You must have the QTK developer library installed on your computer
+
+config BR2_QCONF_FRONTEND
+	bool "Build Qt qconfig frontend"
+	default n
+	help
+	  NOTE: You must have the QTK developer library installed on your computer
+
+config BR2_KCONFIG_FRONTENDS_VERSION
+	string
+	default "3.12.0.0"
+
+endif # BR2_PACKAGE_KCONFIG_FRONTENDS
